[gd_scene load_steps=5 format=3 uid="uid://6m2mnvoosdve"]

[ext_resource type="Script" uid="uid://dqfqft3cbtiu" path="res://scripts/action_zones.gd" id="1_e82nb"]
[ext_resource type="Script" uid="uid://c4l4cx3qg216j" path="res://scripts/playerAction.gd" id="2_lopom"]
[ext_resource type="Texture2D" uid="uid://if7mj6thvoi1" path="res://art/1bitTilesLumberWinter.png" id="3_imtkq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6k1n"]
size = Vector2(8, 4)

[node name="ActionZones" type="Node2D"]
script = ExtResource("1_e82nb")

[node name="RightAction" type="Area2D" parent="."]
position = Vector2(10, -2)
script = ExtResource("2_lopom")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAction"]
shape = SubResource("RectangleShape2D_m6k1n")
debug_color = Color(0.21198, 0.639854, 0, 0.42)

[node name="Sprite2D2" type="Sprite2D" parent="RightAction"]
visible = false
modulate = Color(0.505344, 0.505344, 0.505344, 1)
texture_filter = 1
position = Vector2(-1.19209e-07, -1.19209e-07)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_imtkq")
hframes = 4
vframes = 5
frame = 2

[node name="LeftAction" type="Area2D" parent="."]
position = Vector2(-10, -2)
script = ExtResource("2_lopom")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAction"]
shape = SubResource("RectangleShape2D_m6k1n")
debug_color = Color(0.21198, 0.639854, 0, 0.42)

[node name="Sprite2D2" type="Sprite2D" parent="LeftAction"]
visible = false
modulate = Color(0.505344, 0.505344, 0.505344, 1)
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_imtkq")
hframes = 4
vframes = 5
frame = 2

[node name="UpAction" type="Area2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("2_lopom")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpAction"]
shape = SubResource("RectangleShape2D_m6k1n")
debug_color = Color(0.21198, 0.639854, 0, 0.42)

[node name="Sprite2D2" type="Sprite2D" parent="UpAction"]
visible = false
modulate = Color(0.505344, 0.505344, 0.505344, 1)
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_imtkq")
hframes = 4
vframes = 5
frame = 2

[node name="DownAction" type="Area2D" parent="."]
position = Vector2(0, 4)
script = ExtResource("2_lopom")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownAction"]
shape = SubResource("RectangleShape2D_m6k1n")
debug_color = Color(0.21198, 0.639854, 0, 0.42)

[node name="Sprite2D2" type="Sprite2D" parent="DownAction"]
visible = false
modulate = Color(0.505344, 0.505344, 0.505344, 1)
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_imtkq")
hframes = 4
vframes = 5
frame = 2
